fix(data): DAO completeness, client caching, Loader owner resolution